tdf#163033 sc: fix crash when copying comment to another ScDocument

Fixes a crash that started with
7.6.0.2 commit eec038b982b4672ac8feb030cb6bae546fa8c901

The crash occurred when comments were copied (without cloning)
to another document and then the source document was closed,
removing access to the (uncloned) comment.

Also took the opportunity to put the (minutely) most expensive
comparison at the end of the if clause.

Change-Id: Ia5c1313aa17550f760d5f870c566f06b7abd598b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178394
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
(cherry picked from commit 6edc10c6b0b8322db63230b3a71e393437cbb7ac)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178419
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 6a24783fadcd72ef2913bb8d118d753a8350a599)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178545
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>